public/css/styles.css
/* my bits */
body {
  margin-left: 1em;
  margin-right: 1em;
  width: 970px;
  font-face: sans-serif;
  line-height: 1.2em;
}

p { margin-bottom: 1em; margin-top: 1em; }

.logo {
    margin-top: 10px;
}

h1 {
  font-size: 200%;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 20px;
}


.choose_source {
    margin-left: 1.2em;
    margin-bottom: 1em;
}

.step {
    width: 30px;
    margin-right: 10px;
    position: relative;
    top: 5px;
}

h2 {
  font-size: 150%;
  font-weight: bold;
  margin-top: 20px;
  margin-bottom: 20px;
}

h3 {
    font-weight: bold;
    font-size: 125%;
    margin-bottom: 20px;
    margin-left: 10px;
}

h3:before {
    content: "\2192";
    margin-right: 10px;
}

h4 {
    font-weight: bold;
    display: block;
    margin-bottom: 10px;
}

h5 {
    font-weight: bold;
    display: block;
}

.label {
    display: inline-block;
    width: 4em;
    font-weight: bold;
}

.source_label {
    width: auto;
}

.container {
  border-top: solid #cdcdcd 1px;
  border-bottom: solid #cdcdcd 1px;
  padding-top: 10px;
  padding-bottom: 20px;
  overflow: auto;
}

.clause_group_style {
    border: solid white 4px;
    margin-left: 1em;
}

.group_indicator {
    border-right: solid blue 4px;
}

.clause {
    display: inline;
}

.grouper_checkbox_style {
  float: right;
}

.and_or_buttons {
  float: right;
  margin-top: 20px;
  clear: both;
}

.button_container {
    height: 30px;
    overflow: auto;
    width: 25%;
    float: right
}

.target_field {
    width: 5em;
}

.target_field_container {
  display: inline-block;
 }

.group_button {display: none; float: right;}
.ungroup_button {display: none; float: right;}
.remove_button {display: none; float: right;}

.submit_button {
  margin-top: 25px;
}

#querydisplay {
  font-family: monospace;
  white-space: pre;
  width: 600px;
  scroll-x: auto;
  scroll-y: auto;
}

.field_value {
    width: 30%;
}

.choose_output {
    margin-top: 50px;
}

.source_options_style {
  display: inline-block;
}

.output_options {
  margin-left: 1em;
}

.output_options input[type=text] {
    width: 30em;
}

.field_options {
    margin-left: 2em;
    margin-top: 10px;
}

label {
    vertical-align: top;
    position: relative;
    top: 2px;
    font-weight: bold;
    margin-right: 1em;
    color: black;
 }

.caption {
    color: gray;
    font-size: 60%;
    margin-top: 5px;
}

.tip {
    color: gray;
    font-size: 60%;
    margin-top: 5px;
    margin-left: 3em;
}

.captioned_input {
    display: inline-block;
}

input#submit {
    margin-left: 2em;
}

table#job_list {
    width: 95%;
    margin-left: 1em;
    border-bottom: solid black 1px;
}

table#job_list > tbody > tr > td {
    font-size: 80%;
}

table#job_list > tbody > tr > th {
    text-align: left;
    font-weight: bold;
    border-top: solid black 2px;
    border-bottom: solid black 1px;
    padding-top: 5px;
    padding-bottom: 5px;
}

table#job_list th {
    padding-right: 1em;
}

table#job_list > tbody > tr > td {
    border-bottom: solid #cdcdcd 1px;
    padding-right: 1em;
    padding-top: 10px;
    padding-bottom: 10px;
}

table#job_list .query_column {
    padding-right: 1em;
}

table#job_list .query_summary th {
    padding-left: 1em;
    font-weight: bold;
    text-align: right;
}

table#job_list .job_query {
    width: 500px;
    height: 100%;
    white-space: pre;
    scroll-x: auto;
    overflow-x: auto;
    overflow-y: hidden;

}


.joblist h2:after {
    content: "\2192";
}


.job_control {
    position: relative;
    top: -20px;
    text-align: right;
}

.job_control .bombs_away {
    font-size: 120%;
}

ul {
    list-style-type: circle;
    padding-left: 2em;
}

.help_button {
    color: #3939ff;
    font-weight: bold;
    display: inline-block;
    text-align: center;
    width: 1em;
    text-decoration: none;
    margin-right: 1em;
}

.help_text {
    font-size: 80%;
}

.help_text * {
    max-width: 800px;
}

.tagexample {
    font-family: monospace;
    font-size: 120%;
    display: inline-block;
    width: 5em;
}

.predicate_choice {
    display: inline-block;
    vertical-align: top;
    text-align: right;
}

.example_record {
    white-space: pre-line;
    font-family: monospace;
    margin-bottom: 1em;
    margin-left: 1em;
}

.example {
    margin-left: 1em;
    color: #565656;
    margin-
}

em {
    font-weight: bold;
}


table.cookbook th {
    font-weight: bold;
    text-align: left;
}

table.cookbook td {
    padding-right: 1em;
}

table.cookbook {
    margin-bottom: 1em;
}

.regexp {
    font-family: monospace;
}

.no_wildcards_style {
    font-size: 80%;
    text-align: left;
    margin-left: 5px;
    width: 20em;
}

.error_message_text {
    margin-left: 1em;
    font-weight: bold;
}

.error_trace_text {
    white-space: pre-line;
    font-family: monospace;
    margin-bottom: 1em;
    margin-left: 1em;
}

